<?xml version="1.0"?>
<package format="2">
  <name>ultrasonic_sensor</name>
  <version>0.0.0</version>
  <description>The ultrasonic_sensor package</description>
  
  <maintainer email="nano@todo.todo">nano</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rov_planning</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rov_planning</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rov_planning</exec_depend>

</package>